# Bot

./: .env.example  .gitignore  Client.js  Generated File July 19, 2025 - 5_47PM.javascript  HANDOFF.md  README.md  ai_studio_code (1).js  ai_studio_code (2).js  ai_studio_code (3).js  ai_studio_code (4).js  ai_studio_code.js  bench-ccxt.js  benchmark-order-types.js  binance_xrp_bookticker.csv  bybit_listener.js  client (16).js  client.js  code - 2025-07-17T151500.919.js  code - 2025-07-17T151634.821.js  code - 2025-07-17T174735.767.js  code - 2025-07-17T182008.841.js  code - 2025-07-18T190102.521.js  code - 2025-07-18T202654.123.js  code - 2025-07-18T211907.609.js  code - 2025-07-18T214916.357.js  code - 2025-07-18T223453.530.js  code - 2025-07-19T072354.556.js  code - 2025-07-19T073951.100.js  code - 2025-07-19T075345.066.js  code - 2025-07-19T075956.950.js  code - 2025-07-19T082128.268.js  code - 2025-07-19T152129.124.js  code - 2025-07-19T152711.115.js  code - 2025-07-19T154015.938.js  code - 2025-07-19T154714.881.js  code - 2025-07-19T155528.219.js  code - 2025-07-19T160707.525.js  code - 2025-07-19T161624.758.js  code - 2025-07-19T163305.268.js  code - 2025-07-19T164655.143.js  (+84 more)
bugs/: Demo.js
fast-client/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
fast-client/src/: lib.rs
go-executor/: go.mod  main.go
strategies/: AdvanceStrategy.js  ArbBaselineCCXTStrategy.js  ArbBaselineDebugStrategy.js  ArbBaselineGoStrategy.js  ArbBaselineStrategy.js  BboBracketStrategy.js  FastStrategy.js  HybridMicroLeadTickStrategy.js  HybridStrategy.js  LeadStrategy.js  MicroStrategy.js  MomentumRiderStrategy.js  MomentumSimpleStrategy.js  MonumentStrategy.js  OrderBookPressureStrategy.js  TickStrategy.js  TimeInForceStrategy.js  TrailingStopStrategy.js  code - 2025-07-20T235453.129.js  code - 2025-07-21T043228.469.js  code - 2025-07-21T124138.628.js
strategies/strategies/: MomentumRiderStrategy.js
