[package]
edition = "2021"
name = "fast-client"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Node.js Interface
napi = { version = "2.14", features = ["async", "napi4"] }
napi-derive = "2.14"

# Async Runtime (The engine)
tokio = { version = "1", features = ["full"] }

# High-Performance HTTP Client
# We use 'rustls-tls' because it's often faster and easier to compile than OpenSSL
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Cryptography (HMAC SHA256)
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"

# JSON Parsing (Fastest in the west)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = true             # Link Time Optimization (Makes code faster)
strip = true           # Removes symbols (Makes binary smaller)
codegen-units = 1      # Optimizes better at cost of compile time
panic = 'abort'        # If it crashes, it crashes instantly (no unwinding overhead)
 
